2020-09-18  Markus Gans  <guru.mail@muenster.de>
	* The generic data type FDataPtr is now deprecated and was 
	  completely replaced by the template class FData

2020-09-11  Markus Gans  <guru.mail@muenster.de>
	* Fixes a problem with mouse input in Cygwin in non-blocking read mode

2020-09-08  Markus Gans  <guru.mail@muenster.de>
	* Speed up the reaction time of the gpm mouse
	* FListView now correctly adjusts the size of the scrollbar, 
	  when expanding and collapsing by double-clicking

2020-08-30  Markus Gans  <guru.mail@muenster.de>
	* Adding Windows Terminal detection

2020-08-15  Markus Gans  <guru.mail@muenster.de>
	* The call of the function setNonBlockingRead() resulted in 
	  a high CPU load in idle mode. 
	  Thanks to Pavel Stehule for reporting this problem.

2020-08-11  Markus Gans  <guru.mail@muenster.de>
	* New callback backend was implemented. Callback functions with any 
	  number of arguments are now possible.

2020-07-19  Markus Gans  <guru.mail@muenster.de>
	* API: Some method name changes: 
	       FObject::delOwnTimer() -> FObject::delOwnTimers() 
	       FObject::delAllTimer() -> FObject::delAllTimers() 
	       FWidget::delCallbacks() -> FWidget::delAllCallbacks()

2020-07-08  Markus Gans  <guru.mail@muenster.de>
	* New data wrapper class FData

2020-07-06  Markus Gans  <guru.mail@muenster.de>
	* Add a document that describes how to create user themes

2020-06-11  Markus Gans  <guru.mail@muenster.de>
	* New widget FBusyIndicator to indicate background activity
	* Added example/busy to demonstrate the functionality of this widget

2020-06-07  Markus Gans  <guru.mail@muenster.de>
	* The --log-file parameter stores log output to any file. The file 
	  can be viewed directly on another terminal with "tail -f".

2020-06-06  Markus Gans  <guru.mail@muenster.de>
	* Now, the terminal is not initialized before the method show() 
	  is called. Or you force it explicitly via the FApplication object.
	* Simplification of FMouse::createMouseObject()
